<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:background="@drawable/background_color"
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/import_text"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@color/black"
            android:text="@string/your_image">

        </TextView>

        <ImageView
            android:id="@+id/preview_image"
            android:layout_below="@id/import_text"
            android:layout_above="@+id/save_image_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true">

        </ImageView>

        <LinearLayout
            android:id="@+id/save_image_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/confirm_image_selection"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:background="@drawable/choose_song_buttons"
                android:text="@string/save"
                android:textColor="#FFF"
                android:buttonTint="#FFF"/>

            <Button
                android:id="@+id/cancel_image_selection"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:background="@drawable/choose_song_buttons"
                android:text="@string/cancel"
                android:textColor="#FFF"
                android:buttonTint="#FFF"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>